# sav_control

airo_control/: CMakeLists.txt
airo_control/config/gazebo/: disturbance_observer.yaml
airo_control/config/vicon/: disturbance_observer.yaml  fsm_vicon.yaml  mpc_vicon.yaml
airo_control/include/airo_control/: disturbance_observer.h
airo_control/launch/vicon/: fsm_vicon.launch  mavros_vicon.launch  vrpn.launch
airo_control/src/: aerial_grasp_dyedwater.cpp  aerial_grasping.cpp  battery_thrust_test.cpp  disturbance_observer.cpp  example_mission_node.cpp  one_pt_test.cpp  pwm_close.cpp  pwm_init.cpp  pwm_open.cpp  tracking.csv  tracking_1ptTest_ekf.csv  tracking_1ptTest_ekf_256batt.csv  tracking_1ptTest_noEKF.csv  tracking_1ptTest_noEKF_256batt.csv  tracking_251gbatt_tuningekfZco.csv  tracking_251gbattery_ekf3.csv  tracking_251gbattery_ekf4.csv  tracking_50gpayload.csv  tracking_applyEKF.csv  tracking_applyEKF_96hz.csv  tracking_applyEKF_96hz_257gbatt.csv  tracking_applyEKF_LiFe.csv  tracking_applyEKF_inputu.csv  tracking_applyEKF_inputu_pos.csv  tracking_applyEKF_long.csv  tracking_grasphit_2.csv  tracking_gripperopenandclose.csv  tracking_noEKF.csv  tracking_noEKF_long.csv  tracking_sevptTest_ekf.csv  tracking_sevptTest_ekf_256batt.csv  tracking_short_bottle.csv  tracking_short_bottle2.csv  tracking_thrust_test.csv
airo_control/src/log/: disturbance_comparison_NOapplyEKF_grippertest.csv  disturbance_comparison_battery.csv
airo_control/src/tracking_errors/: tracking_approach.csv  tracking_grasp.csv  tracking_hover.csv  tracking_lift.csv  tracking_preland.csv  tracking_release.csv
airo_control/src/tracking_errors_66gball_success/: tracking_grasp.csv  tracking_hover.csv  tracking_land.csv  tracking_lift.csv  tracking_preland.csv  tracking_release.csv
airo_control/src/tracking_errors_ball54g_lastrecord/: tracking_grasp.csv  tracking_hover.csv  tracking_land.csv  tracking_lift.csv  tracking_preland.csv  tracking_release.csv
airo_control/src/tracking_errors_ball54g_notgdgrasp/: tracking_grasp.csv  tracking_hover.csv  tracking_land.csv  tracking_lift.csv  tracking_preland.csv  tracking_release.csv
airo_control/src/tracking_errors_ball_54g/: tracking_grasp.csv  tracking_hover.csv  tracking_land.csv  tracking_lift.csv  tracking_preland.csv  tracking_release.csv
airo_control/src/tracking_errors_sevptTest_256batt/: grasp.csv  land.csv  lift.csv  release.csv
airo_control/src/tracking_sevptTest_ekf/: grasp.csv  land.csv  lift.csv  release.csv
record/: cir.cpp  cir_txt.cpp  circle_hover.txt  ekf_observer.cpp  ekf_observer_gazebo.yaml  ekf_rosbag.cpp  fsm_gazebo.yaml  plot_comparison.py  plot_ekf.py  rosbag_node.cpp
